--- a/index.html
+++ b/index.html
@@ -3,24 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="디지털 전자명함 - 스마트한 비즈니스 네트워킹"
-        />
-        <meta
-            name="keywords"
-            content="전자명함, 디지털명함, 비즈니스카드, 명함, 네트워킹"
-        />
-        <meta name="author" content="Your Name" />
 
         <!-- Open Graph / Facebook -->
 
-        <meta property="og:title" content="전자 명함 | Digital Business Card" />
+        <meta property="og:title" content="전자 명함 | 돈버는명함" />
         <meta
             property="og:description"
             content="디지털 전자명함 - 스마트한 비즈니스 네트워킹"
         />
-        <meta property="og:image" content="https://yourcard.com/og-image.jpg" />
+        <meta
+            property="og:image"
+            content="https://jongyoun3128.github.io/namecard/images/namelogo.png"
+        />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
