--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                     </button>
                 </div>
             </div>
-
+            <div class="page">
+                <img src="images/page.png" alt="" />
+            </div>
             <!-- 서비스 소개 섹션 -->
             <div class="card services-card">
                 <div class="services-header">
