--- a/index.html
+++ b/index.html
@@ -37,41 +37,47 @@
                 </div>
             </div>
         </nav>
-
+        <div class="cover-image" id="coverImage">
+            <img src="images/url.png" alt="" />
+        </div>
         <div class="container">
             <!-- 명함 카드 -->
             <div class="card" id="businessCard">
                 <!-- 커버 이미지 (옵션) -->
-                <div class="cover-image" id="coverImage">
-                    <img src="images/url.png" alt="" />
-                </div>
 
                 <!-- 프로필 섹션 -->
                 <div class="profile-section">
+                    <p class="company">(주)테크이노베이션</p>
                     <p class="title">대표이사 / CEO</p>
                     <h1 class="name">홍길동</h1>
-                    <p class="company">(주)테크이노베이션</p>
+                    <p class="contact-value">010-8407-8428</p>
+                    <p class="contact-value">
+                        금천구 가산동 벚꽃로 286 삼성리더스타워 1101호
+                    </p>
+                    <p class="contact-value">officecine01@gmail.com</p>
+                    <a href="http://pointground.co.kr/"
+                        ><p class="contact-value">www.company.com</p></a
+                    >
+                    <div class="qr-code-wrapper1">
+                        <a
+                            href="https://jongyoun3128.github.io/namecard/"
+                            target="_blank"
+                            ><img src="images/qrcode.jpg" alt=""
+                        /></a>
+                    </div>
                 </div>
 
                 <!-- 소개 섹션 -->
-                <div class="bio-section">
+                <!-- <div class="bio-section">
                     <p class="bio-text big-size">
                         쇼핑몰·OTT·카페 프랜차이즈·프리미엄 렌탈·컨설팅을 한데
                         잇는 종합 비즈니스 플랫폼입니다. <br />어렵게 느껴지는
                         홈페이지·상세페이지·전자명함, <br />저희가 알기 쉽게
                         상담해드리고 깔끔하게 제작해드립니다.
                     </p>
-                    <p class="bio-text small-size">
-                        쇼핑몰·OTT·카페 프랜차이즈<br />프리미엄 렌탈·컨설팅을
-                        한데 잇는 <br />종합 비즈니스 플랫폼입니다.<br />
-                        어렵게 느껴지는<br />
-                        홈페이지·상세페이지·전자명함,<br />
-                        저희가 알기 쉽게 상담해드리고<br />
-                        깔끔하게 제작해드립니다.
-                    </p>
-                </div>
+                </div> -->
 
-                <!-- 연락처 섹션 -->
+                <!-- 연락처 섹션
                 <div class="contact-section">
                     <h3 class="section-title">정보</h3>
                     <div class="contact-grid">
@@ -143,7 +149,7 @@
                             <span class="contact-value">www.company.com</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- 액션 버튼 -->
                 <div class="action-buttons">
@@ -497,7 +503,9 @@
                     QR 코드로 명함 공유하기
                 </h3>
                 <div class="qr-code-wrapper">
-                    <a href="http://pointground.co.kr/" target="_blank"
+                    <a
+                        href="https://jongyoun3128.github.io/namecard/"
+                        target="_blank"
                         ><img src="images/qrcode.jpg" alt=""
                     /></a>
                 </div>
