--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         />
         <meta
             property="og:image"
-            content="https://jongyoun3128.github.io/namecard/images/namelogo.png"
+            content="https://jongyoun3128.github.io/namecard/images/urlimage.png"
         />
         <title>돈버는명함</title>
         <link rel="stylesheet" href="style.css" />
@@ -24,12 +24,12 @@
         <nav class="top-nav">
             <div class="nav-content">
                 <div class="logo">
-                    <h3>돈버는명함</h3>
+                    <h3 data-i18n="title">돈버는명함</h3>
                 </div>
                 <div class="nav-actions">
                     <button class="nav-btn" id="styleBtn">
                         <i class="fas fa-palette"></i>
-                        <span>스타일</span>
+                        <span data-i18n="style">스타일</span>
                     </button>
                     <button class="nav-btn" id="themeToggle">
                         <i class="fas fa-moon"></i>
@@ -47,12 +47,14 @@
 
                 <!-- 프로필 섹션 -->
                 <div class="profile-section">
-                    <p class="company">(주)테크이노베이션</p>
-                    <p class="title">대표이사 / CEO</p>
-                    <h1 class="name">홍길동</h1>
+                    <p class="company" data-i18n="profile.company">
+                        POINTGROUND
+                    </p>
+                    <p class="title" data-i18n="profile.title">회장</p>
+                    <h1 class="name" data-i18n="profile.name">손가비</h1>
                     <p class="contact-value">010-8407-8428</p>
-                    <p class="contact-value">
-                        금천구 가산동 벚꽃로 286 삼성리더스타워 1101호
+                    <p class="contact-value" data-i18n="profile.address">
+                        서울특별시 금천구 벚꽃로 286 삼성리더스타워 1101호
                     </p>
                     <p class="contact-value">officecine01@gmail.com</p>
                     <a href="http://pointground.co.kr/"
@@ -155,15 +157,15 @@
                 <div class="action-buttons">
                     <button class="btn btn-primary" id="saveContact">
                         <i class="fas fa-address-book"></i>
-                        <span>연락처 저장</span>
+                        <span data-i18n="action.save">연락처 저장</span>
                     </button>
                     <button class="btn btn-secondary" id="shareBtn">
                         <i class="fas fa-share-alt"></i>
-                        <span>명함 공유</span>
+                        <span data-i18n="action.share">명함 공유</span>
                     </button>
                     <button class="btn btn-tertiary" id="qrBtn">
                         <i class="fas fa-qrcode"></i>
-                        <span>QR 코드</span>
+                        <span data-i18n="action.qr">QR 코드</span>
                     </button>
                 </div>
             </div>
@@ -618,7 +620,71 @@
                 </div>
             </div>
         </div>
+        <div class="lang-flags">
+            <button onclick="changeLang('ko')" data-lang="ko">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/kr.svg"
+                    alt="Korean"
+                />
+            </button>
+            <button onclick="changeLang('en')" data-lang="en">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/us.svg"
+                    alt="English"
+                />
+            </button>
+            <button onclick="changeLang('ja')" data-lang="ja">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/jp.svg"
+                    alt="Japanese"
+                />
+            </button>
+            <button onclick="changeLang('zh')" data-lang="zh">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/cn.svg"
+                    alt="Chinese"
+                />
+            </button>
+            <button onclick="changeLang('fr')" data-lang="fr">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/fr.svg"
+                    alt="French"
+                />
+            </button>
+            <button onclick="changeLang('de')" data-lang="de">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/de.svg"
+                    alt="German"
+                />
+            </button>
+            <button onclick="changeLang('es')" data-lang="es">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/es.svg"
+                    alt="Spanish"
+                />
+            </button>
+            <button onclick="changeLang('it')" data-lang="it">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/it.svg"
+                    alt="Italian"
+                />
+            </button>
+            <button onclick="changeLang('pt')" data-lang="pt">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/pt.svg"
+                    alt="Portuguese"
+                />
+            </button>
+            <button onclick="changeLang('ru')" data-lang="ru">
+                <img
+                    src="https://hatscripts.github.io/circle-flags/flags/ru.svg"
+                    alt="Russian"
+                />
+            </button>
+        </div>
+
         <script src="script.js"></script>
         <script src="config.js"></script>
+        <script src="i18n.js"></script>
     </body>
 </html>
