--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </p>
                     <p class="contact-value">officecine01@gmail.com</p>
                     <a href="http://pointground.co.kr/"
-                        ><p class="contact-value">www.company.com</p></a
+                        ><p class="contact-value">www.pointground.co.kr</p></a
                     >
                     <div class="qr-code-wrapper1">
                         <a
