--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         />
         <meta
             property="og:image"
-            content="https://jongyoun3128.github.io/namecard/images/urlimage.png"
+            content="https://jongyoun3128.github.io/namecard-yookyungsook/images/urlimage.png"
         />
         <title>돈버는명함</title>
         <link rel="stylesheet" href="style.css" />
@@ -42,6 +42,22 @@
         </div>
         <div class="container">
             <!-- 명함 카드 -->
+            <section class="hero">
+                <h1 data-i18n="hero.main">설명하지 않아도 이해되는 전자명함</h1>
+
+                <p class="hero-sub" data-i18n="hero.sub">
+                    QR 하나로 소개·신뢰·연락까지 한 번에 전달하세요.
+                </p>
+
+                <p class="hero-point" data-i18n="hero.point">
+                    국내·해외 고객에게 바로 전달 가능한
+                    <strong>다국어 전자명함</strong>
+                </p>
+
+                <a href="#contact" class="hero-cta" data-i18n="hero.cta">
+                    명함을 바꾸면, 결과가 달라집니다.
+                </a>
+            </section>
 
             <div class="page">
                 <img src="images/page.png" alt="" />
@@ -382,7 +398,7 @@
                     <a
                         href="https://jongyoun3128.github.io/namecard/"
                         target="_blank"
-                        ><img src="images/qrcode.jpg" alt=""
+                        ><img src="images/qrcode1.jpg" alt=""
                     /></a>
                 </div>
                 <p class="qr-description">
