--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
                         <div class="pricing-card">
                             <div class="pricing-header">
                                 <i class="fas fa-id-badge"></i>
-                                <h4>전자명함 제작</h4>
+                                <h4>입점조건 (전자명함)</h4>
                             </div>
                             <div class="pricing-price">
                                 <span class="price-main">390,000원</span>
-                                <span class="price-sub">1회 제작비</span>
+                                <span class="price-sub">가입시 제작</span>
                             </div>
                             <div class="pricing-monthly">
-                                <span>+ 월 10,000원</span>
-                                <small>(서버 + 유지관리)</small>
+                                <span>+ 1년 50,000원</span>
+                                <small>(서버비: 리워드차감)</small>
                             </div>
                             <ul class="pricing-features">
                                 <li>
@@ -172,8 +172,8 @@
                                 <h4>상품 상세페이지 제작</h4>
                             </div>
                             <div class="pricing-price">
-                                <span class="price-main">390,000원</span>
-                                <span class="price-sub">1회 제작비</span>
+                                <span class="price-main">490,000원</span>
+                                <span class="price-sub">별도</span>
                             </div>
                             <div class="pricing-monthly empty">
                                 <span>&nbsp;</span>
@@ -210,15 +210,14 @@
                             <div class="pricing-badge">추천</div>
                             <div class="pricing-header">
                                 <i class="fas fa-desktop"></i>
-                                <h4>홈페이지 + 상세페이지</h4>
+                                <h4>홈페이지</h4>
                             </div>
                             <div class="pricing-price">
-                                <span class="price-main">990,000원</span>
-                                <span class="price-sub">1회 제작비</span>
+                                <span class="price-main">1년 360,000원</span>
+                                <span class="price-sub">서버비: 리워드차감</span>
                             </div>
-                            <div class="pricing-monthly">
-                                <span>+ 월 50,000원</span>
-                                <small>(서버 + 유지관리)</small>
+                            <div class="pricing-monthly empty">
+                                <span>&nbsp;</span>
                             </div>
                             <ul class="pricing-features">
                                 <li>
