--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         />
         <meta
             property="og:image"
-            content="https://jongyoun3128.github.io/namecard-yookyungsook/images/urlimage.png"
+            content="https://jongyoun3128.github.io/namecard-yookyungsook/images/url.png"
         />
         <title>돈버는명함</title>
         <link rel="stylesheet" href="style.css" />
@@ -135,7 +135,7 @@
                                 <span class="price-sub">가입시 제작</span>
                             </div>
                             <div class="pricing-monthly">
-                                <span>+ 1년 50,000원</span>
+                                <span>+ 1년 55,000원</span>
                                 <small>(서버비: 리워드차감)</small>
                             </div>
                             <ul class="pricing-features">
@@ -213,8 +213,11 @@
                                 <h4>홈페이지</h4>
                             </div>
                             <div class="pricing-price">
-                                <span class="price-main">1년 360,000원</span>
-                                <span class="price-sub">서버비: 리워드차감</span>
+                                <span class="price-main"> 990,000원</span>
+                                <div class="pricing-monthly">
+                                    <span>+ 1년 330,000원</span>
+                                    <small>(서버비: 리워드차감)</small>
+                                </div>
                             </div>
                             <div class="pricing-monthly empty">
                                 <span>&nbsp;</span>
