--- a/index.html
+++ b/index.html
@@ -246,6 +246,16 @@
                                     신뢰도가 좋아집니다.
                                 </p>
                             </div>
+                            <div class="pricing-button">
+                                <a
+                                    href="https://jongyoun3128.github.io/sapmple1/version3"
+                                    target="_blank"
+                                    class="package-btn"
+                                >
+                                    <i class="fas fa-external-link-alt"></i>
+                                    패키지 자세히 보기
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
