--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             property="og:image"
             content="https://jongyoun3128.github.io/namecard-yookyungsook/images/url.png"
         />
-        <title>돈버는명함</title>
+        <title>전자명함</title>
         <link rel="stylesheet" href="style.css" />
         <link
             rel="stylesheet"
@@ -24,7 +24,7 @@
         <nav class="top-nav">
             <div class="nav-content">
                 <div class="logo">
-                    <h3 data-i18n="title">돈버는명함</h3>
+                    <h3 data-i18n="title">BizUp</h3>
                 </div>
                 <div class="nav-actions">
                     <button class="nav-btn" id="styleBtn">
@@ -128,7 +128,7 @@
                         <div class="pricing-card">
                             <div class="pricing-header">
                                 <i class="fas fa-id-badge"></i>
-                                <h4>입점조건 (전자명함)</h4>
+                                <h4>소호 전자명함 제작</h4>
                             </div>
                             <div class="pricing-price">
                                 <span class="price-main">390,000원</span>
@@ -136,7 +136,7 @@
                             </div>
                             <div class="pricing-monthly">
                                 <span>+ 1년 55,000원</span>
-                                <small>(서버비: 리워드차감)</small>
+                                <small>(서버비: 리워드차감가능)</small>
                             </div>
                             <ul class="pricing-features">
                                 <li>
@@ -169,11 +169,14 @@
                         <div class="pricing-card">
                             <div class="pricing-header">
                                 <i class="fas fa-file-alt"></i>
-                                <h4>상품 상세페이지 제작</h4>
+                                <h4>명함 + 상세페이지 제작</h4>
                             </div>
                             <div class="pricing-price">
-                                <span class="price-main">490,000원</span>
-                                <span class="price-sub">별도</span>
+                                <span class="price-main">590,000원</span>
+                            </div>
+                            <div class="pricing-monthly">
+                                <span>상세페이지 상품추가시</span>
+                                <small>+200,000원</small>
                             </div>
                             <div class="pricing-monthly empty">
                                 <span>&nbsp;</span>
@@ -210,13 +213,12 @@
                             <div class="pricing-badge">추천</div>
                             <div class="pricing-header">
                                 <i class="fas fa-desktop"></i>
-                                <h4>홈페이지</h4>
+                                <h4>기업명함 + 홈페이지 제작</h4>
                             </div>
                             <div class="pricing-price">
                                 <span class="price-main"> 990,000원</span>
                                 <div class="pricing-monthly">
-                                    <span>+ 1년 330,000원</span>
-                                    <small>(서버비: 리워드차감)</small>
+                                    <span>+ 1년 33,000원(인당)</span>
                                 </div>
                             </div>
                             <div class="pricing-monthly empty">
@@ -253,7 +255,7 @@
                                     class="package-btn"
                                 >
                                     <i class="fas fa-external-link-alt"></i>
-                                    패키지 자세히 보기
+                                    자세히 보기
                                 </a>
                             </div>
                         </div>
