--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <!-- 상단 네비게이션 -->
         <nav class="top-nav">
             <div class="nav-content">
-                <div class="logo">
-                    <h3 data-i18n="title">BizUp</h3>
-                </div>
+                <div class="logo"><img src="images/logo2.png" alt="" /></div>
                 <div class="nav-actions">
                     <button class="nav-btn" id="styleBtn">
                         <i class="fas fa-palette"></i>
