--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </div>
                             <div class="pricing-button">
                                 <a
-                                    href="https://jongyoun3128.github.io/sapmple1/version3"
+                                    href="https://jongyoun3128.github.io/promote/"
                                     target="_blank"
                                     class="package-btn"
                                 >
