--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         />
         <meta
             property="og:image"
-            content="https://jongyoun3128.github.io/namecard-yookyungsook/images/logo.png"
+            content="https://jongyoun3128.github.io/namecard/images/logo.png"
         />
         <title>전자명함</title>
         <link rel="stylesheet" href="style.css" />
