--- a/index.html
+++ b/index.html
@@ -126,15 +126,59 @@
                         <div class="pricing-card">
                             <div class="pricing-header">
                                 <i class="fas fa-id-badge"></i>
+                                <h4>기본명함 제작</h4>
+                            </div>
+                            <div class="pricing-price">
+                                <span class="price-main"
+                                    >제작비<br />
+                                    무료</span
+                                >
+                            </div>
+                            <div class="pricing-monthly">
+                                <span
+                                    >호스팅비용<br />
+                                    1년 55,000원</span
+                                >
+                            </div>
+                            <ul class="pricing-features">
+                                <li>
+                                    <i class="fas fa-check"></i> 모바일에서 보기
+                                    편한 기본 전자명함 페이지
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> 기본 정보 구성
+                                    (소개/연락처)
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> 카카오톡·문자
+                                    공유 링크 제공
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> QR코드 제작
+                                    (인쇄/공유용)
+                                </li>
+                            </ul>
+                            <div class="pricing-use">
+                                <strong>활용 방법</strong>
+                                <p>
+                                    종이명함에 QR코드를 넣으면, 고객이 한 번에
+                                    정보 확인 가능합니다.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="pricing-card">
+                            <div class="pricing-header">
+                                <i class="fas fa-id-badge"></i>
                                 <h4>소호 전자명함 제작</h4>
                             </div>
                             <div class="pricing-price">
                                 <span class="price-main">390,000원</span>
-                                <span class="price-sub">가입시 제작</span>
                             </div>
                             <div class="pricing-monthly">
-                                <span>+ 1년 55,000원</span>
-                                <small>(서버비: 리워드차감가능)</small>
+                                <span
+                                    >호스팅비용<br />
+                                    1년 55,000원</span
+                                >
                             </div>
                             <ul class="pricing-features">
                                 <li>
@@ -173,8 +217,10 @@
                                 <span class="price-main">590,000원</span>
                             </div>
                             <div class="pricing-monthly">
-                                <span>상세페이지 상품추가시</span>
-                                <small>+200,000원</small>
+                                <span
+                                    >호스팅비용<br />
+                                    1년 55,000원</span
+                                >
                             </div>
                             <div class="pricing-monthly empty">
                                 <span>&nbsp;</span>
@@ -208,7 +254,6 @@
 
                         <!-- 홈페이지 + 상세페이지 -->
                         <div class="pricing-card featured">
-                            <div class="pricing-badge">추천</div>
                             <div class="pricing-header">
                                 <i class="fas fa-desktop"></i>
                                 <h4>기업명함 + 홈페이지 제작</h4>
@@ -216,7 +261,10 @@
                             <div class="pricing-price">
                                 <span class="price-main"> 990,000원</span>
                                 <div class="pricing-monthly">
-                                    <span>+ 1년 33,000원(인당)</span>
+                                    <span
+                                        >호스팅비용<br />
+                                        1년 55,000원(인당)</span
+                                    >
                                 </div>
                             </div>
                             <div class="pricing-monthly empty">
@@ -256,6 +304,82 @@
                                     자세히 보기
                                 </a>
                             </div>
+                        </div>
+                        <div class="pricing-card featured">
+                            <div class="pricing-header">
+                                <i class="fas fa-building"></i>
+                                <h4>기업 + 상세페이지</h4>
+                            </div>
+                            <div class="pricing-price">
+                                <span class="price-main"> 1,590,000원</span>
+                                <div class="pricing-monthly">
+                                    <span
+                                        >호스팅비용<br />
+                                        1년 55,000원(인당)</span
+                                    >
+                                </div>
+                            </div>
+                            <div class="pricing-monthly empty">
+                                <span>&nbsp;</span>
+                            </div>
+                            <ul class="pricing-features">
+                                <li>
+                                    <i class="fas fa-check"></i> 기업용 홈페이지
+                                    + 명함 통합 제작
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> 상품/서비스
+                                    상세페이지 제작
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> 직원별 개별
+                                    전자명함 (다중 명함 지원)
+                                </li>
+                            </ul>
+                            <div class="pricing-use">
+                                <strong>기대 효과</strong>
+                                <p>
+                                    회사 전체 직원이 통일된 브랜드 이미지로
+                                    전문성을 높일 수 있습니다.
+                                </p>
+                            </div>
+                            <div class="pricing-button"></div>
+                        </div>
+                        <div class="pricing-card featured">
+                            <div class="pricing-header">
+                                <i class="fas fa-landmark"></i>
+                                <h4>관공서(50명기준)</h4>
+                            </div>
+                            <div class="pricing-price">
+                                <span class="price-main"> 3,300,000원</span>
+                                <div class="pricing-monthly">
+                                    <span
+                                        >호스팅비용<br />
+                                        1년 55,000원(인당)</span
+                                    >
+                                </div>
+                            </div>
+                            <div class="pricing-monthly empty">
+                                <span>&nbsp;</span>
+                            </div>
+                            <ul class="pricing-features">
+                                <li>
+                                    <i class="fas fa-check"></i> 50명 전자명함
+                                    일괄 제작
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> 기관 전용
+                                    홈페이지
+                                </li>
+                            </ul>
+                            <div class="pricing-use">
+                                <strong>기대 효과</strong>
+                                <p>
+                                    대규모 조직의 모든 직원 명함을 한 번에
+                                    관리하고 대외 신뢰도를 향상시킵니다.
+                                </p>
+                            </div>
+                            <div class="pricing-button"></div>
                         </div>
                     </div>
                 </div>
