--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             content="https://jongyoun3128.github.io/namecard/images/logo.png"
         />
         <title>전자명함</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -650,8 +650,8 @@
             </button>
         </div>
 
-        <script src="script.js"></script>
-        <script src="config.js"></script>
-        <script src="i18n.js"></script>
+        <script src="./js/script.js"></script>
+        <script src="./js/config.js"></script>
+        <script src="./js/i18n.js"></script>
     </body>
 </html>
