--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                         href="https://jongyoun3128.github.io/namecard/"
                         target="_blank"
                     >
-                        <img src="images/qrcode1.jpg" alt="" />
+                        <img src="images/qrcode1.png" alt="" />
                     </a>
                 </div>
 
